Finish with website

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,45 @@
 body{
-  background-color: #F9F7E8 !important;
+  background-color: #f5f2f0 !important;
   font-family: 'Roboto', sans-serif !important;
   padding: 60px;
 }  
 
-.names {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
+.adj-block{
+  max-width: 180px;
+}
+
+.adj{
+  user-select: none;
+}
+
+.adj-row{
+  
+}
+
+.main__container{
+  display: inline-block;
+  vertical-align: top;
+}
+
+.el{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+  line-height: 20px;
+  text-align: center;
+  vertical-align: top;
+  margin: 1px;
+}
+
+.el-prohibited{
+  color: #f5f2f0;
+  cursor: not-allowed;
+}
+
+.el-allowed:hover{
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* Tooltip CSS */
@@ -21,19 +53,6 @@ body{
   border-radius: 1px;
   pointer-events: none;
   position: absolute;
-}
-
-
-/* stylesheet for your custom graph */
-
-.states {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
-}
-
-.states-choropleth {
-  fill: #ccc;
 }
 
 #tooltip-container {
@@ -52,41 +71,4 @@ body{
 .tooltip_value {
   margin-left: 20px;
   float: right;
-}
-
-.total-unemp{
-  margin-top: 30px;
-}
-
-.unemp-mean{
-  margin: 15px 0;
-  font-size: 24px;
-  font-weight: 500;
-}
-/*    
-text{
-  pointer-events:none;
-}
-*/
-
-.details {
-  color: white;
-}
-
-.switcher {
-  cursor: pointer;
-  font-weight: 100;
-}
-
-.switcher:hover {
-  text-decoration: underline;
-}
-
-.switcher.active{
-  font-weight: 300;
-  text-decoration: underline;
-}
-
-.switcher.active:before {
-  content: '>';
 }
